--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11,12 +11,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Бинарная классификация (эмоциональная окраска отзывов на IMDB)\n"
+        "## Мультиклассовая классификация по вопросам о языках программирования на Stack Overflow\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "8RZOuS9LWQvv"
       },
@@ -41,16 +41,11 @@
       "source": [
         "## Sentiment analysis\n",
         "\n",
-        "This notebook trains a sentiment analysis model to classify movie reviews as _positive_ or _negative_, based on the text of the review. This is an example of _binary_—or two-class—classification, an important and widely applicable kind of machine learning problem.\n",
+        "This dataset is an extract from the public Stack Overflow dataset for use as a tutorial on tensorflow.org.\n",
         "\n",
-        "You'll use the [Large Movie Review Dataset](https://ai.stanford.edu/~amaas/data/sentiment/) that contains the text of 50,000 movie reviews from the [Internet Movie Database](https://www.imdb.com/). These are split into 25,000 reviews for training and 25,000 reviews for testing. The training and testing sets are _balanced_, meaning they contain an equal number of positive and negative reviews.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "[!] В качестве домашнего задания используйте датасет по ссылке: https://storage.googleapis.com/download.tensorflow.org/data/stack_overflow_16k.tar.gz\n"
+        "It contains the body of 16,000 posts on four languages (Java, Python, CSharp, and Javascript), which are equally divided into train and test.\n",
+        "\n",
+        "The keywords \"Java\", \"Python\", \"CSharp\" and \"JavaScript\" have been replaced in each post by the word \"BLANK\" in order to increase the difficulty of this dataset in classification examples.\n"
       ]
     },
     {
@@ -64,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -74,18 +69,18 @@
       },
       "outputs": [],
       "source": [
-        "url = \"https://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\"\n",
+        "url = \"https://storage.googleapis.com/download.tensorflow.org/data/stack_overflow_16k.tar.gz\"\n",
         "\n",
         "dataset = tf.keras.utils.get_file(\n",
-        "    \"aclImdb_v1\", url, untar=True, cache_dir=\".\", cache_subdir=\"\"\n",
+        "    \"stack_overflow_16k\", url, untar=True, cache_dir=\".\", cache_subdir=\".dataset\"\n",
         ")\n",
         "\n",
-        "dataset_dir = os.path.join(os.path.dirname(dataset), \"aclImdb\")"
+        "dataset_dir = os.path.dirname(dataset)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -93,14 +88,25 @@
         "id": "355CfOvsV1pl",
         "outputId": "eac7e2bb-20ea-4cb5-bdae-0b7cbc8b0169"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['README.md', 'stack_overflow_16k.tar.gz', 'test', 'train']"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "os.listdir(dataset_dir)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -108,30 +114,41 @@
         "id": "7ASND15oXpF1",
         "outputId": "62a3f730-e35f-4a56-d992-5620e256342e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['csharp', 'java', 'javascript', 'python']"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "train_dir = os.path.join(dataset_dir, \"train\")\n",
         "os.listdir(train_dir)"
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ysMNMI1CWDFD"
-      },
-      "source": [
-        "The `aclImdb/train/pos` and `aclImdb/train/neg` directories contain many text files, each of which is a single movie review. Let's take a look at one of them.\n"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "R7g8hFvzWLIZ"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\"is it legal to define two methods with the same name but different returning types? i've written a piece of code to determine a typical palindrome string. i did this by the definition of a reverse() method returning a string. i also eager to have the same method, but in the void form, because of some future needs..as i add the latter to the code, the valid output will become invalid..so, the question is that is it legal to define two methods with the same name but different returning types?.if not, please let me know how to write this code with the void-type method...class detector(object):.    def __init__(self,string):.        self.string = string..    forbidden = (' ','!','?','.','-','_','&amp;','%',\"\"#\"\",\"\",\"\")..    def eliminator(self):.        for item in self.forbidden:.            if item in self.string:.                self.string = self.string.replace(item,\"\"\"\")..    def reverse(self):.        return self.string[::-1]            ..    #def reverse(self):.    #    self.string = self.string[::-1]    i am prone to add this method..    def check(self):.        reversed = self.reverse().        if self.string == reversed:.            print(\"\"yes\"\").        else:.            print(\"\"no\"\")..det = detector(\"\"rise to vote, sir!\"\").det.eliminator().det.check()...when i add the commented lines, the valid \"\"yes\"\" becomes \"\"no\"\"!\"\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "sample_file = os.path.join(train_dir, \"pos/1181_9.txt\")\n",
+        "sample_file = os.path.join(train_dir, \"python/0.txt\")\n",
         "with open(sample_file) as f:\n",
         "    print(f.read())"
       ]
@@ -144,38 +161,37 @@
       "source": [
         "### Загрузите датасет\n",
         "\n",
-        "Next, you will load the data off disk and prepare it into a format suitable for training. To do so, you will use the helpful [text_dataset_from_directory](https://www.tensorflow.org/api_docs/python/tf/keras/preprocessing/text_dataset_from_directory) utility, which expects a directory structure as follows.\n",
+        "Структура скаченного датасета\n",
         "\n",
         "```\n",
-        "main_directory/\n",
-        "...class_a/\n",
-        "......a_text_1.txt\n",
-        "......a_text_2.txt\n",
-        "...class_b/\n",
-        "......b_text_1.txt\n",
-        "......b_text_2.txt\n",
+        ".dataset/\n",
+        "....test/\n",
+        ".......python/\n",
+        "..........0.txt\n",
+        "..........1.txt\n",
+        ".......javascript/\n",
+        "..........0.txt\n",
+        "..........1.txt\n",
+        ".......csharp/\n",
+        "..........0.txt\n",
+        "..........1.txt\n",
+        ".......java/\n",
+        "..........0.txt\n",
+        "..........1.txt\n",
+        "....train/\n",
+        ".......python/\n",
+        "..........0.txt\n",
+        "..........1.txt\n",
+        ".......javascript/\n",
+        "..........0.txt\n",
+        "..........1.txt\n",
+        ".......csharp/\n",
+        "..........0.txt\n",
+        "..........1.txt\n",
+        ".......java/\n",
+        "..........0.txt\n",
+        "..........1.txt\n",
         "```\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "nQauv38Lnok3"
-      },
-      "source": [
-        "To prepare a dataset for binary classification, you will need two folders on disk, corresponding to `class_a` and `class_b`. These will be the positive and negative movie reviews, which can be found in `aclImdb/train/pos` and `aclImdb/train/neg`. As the IMDB dataset contains additional folders, you will remove them before using this utility.\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "VhejsClzaWfl"
-      },
-      "outputs": [],
-      "source": [
-        "remove_dir = os.path.join(train_dir, \"unsup\")\n",
-        "shutil.rmtree(remove_dir)"
       ]
     },
     {
