load dataset and split on train, validate and test

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "8RZOuS9LWQvv"
       },
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -95,7 +95,7 @@
               "['README.md', 'stack_overflow_16k.tar.gz', 'test', 'train']"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -121,7 +121,7 @@
               "['csharp', 'java', 'javascript', 'python']"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -133,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {
         "id": "R7g8hFvzWLIZ"
       },
@@ -200,16 +200,14 @@
         "id": "95kkUdRoaeMw"
       },
       "source": [
-        "Next, you will use the `text_dataset_from_directory` utility to create a labeled `tf.data.Dataset`. [tf.data](https://www.tensorflow.org/guide/data) is a powerful collection of tools for working with data.\n",
+        "Используем `text_dataset_from_directory` для создания `tf.data.Dataset`.\n",
         "\n",
-        "When running a machine learning experiment, it is a best practice to divide your dataset into three splits: [train](https://developers.google.com/machine-learning/glossary#training_set), [validation](https://developers.google.com/machine-learning/glossary#validation_set), and [test](https://developers.google.com/machine-learning/glossary#test-set).\n",
-        "\n",
-        "The IMDB dataset has already been divided into train and test, but it lacks a validation set. Let's create a validation set using an 80:20 split of the training data by using the `validation_split` argument below.\n"
+        "Датасет уже поделен на train и test, но мы выделим train и validation set, используя деление 80:20.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -217,13 +215,22 @@
         "id": "nOrK-MTYaw3C",
         "outputId": "2fa0cc27-a3dd-40f2-9b48-ae410c8cd087"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found 8000 files belonging to 4 classes.\n",
+            "Using 6400 files for training.\n"
+          ]
+        }
+      ],
       "source": [
         "batch_size = 32\n",
         "seed = 42\n",
         "\n",
-        "raw_train_ds = tf.keras.utils.text_dataset_from_directory(\n",
-        "    \"aclImdb/train\",\n",
+        "raw_train_ds: tf.data.Dataset = tf.keras.utils.text_dataset_from_directory(\n",
+        "    \".dataset/train\",\n",
         "    batch_size=batch_size,\n",
         "    validation_split=0.2,\n",
         "    subset=\"training\",\n",
@@ -237,12 +244,14 @@
         "id": "5Y33oxOUpYkh"
       },
       "source": [
-        "As you can see above, there are 25,000 examples in the training folder, of which you will use 80% (or 20,000) for training. As you will see in a moment, you can train a model by passing a dataset directly to `model.fit`. If you're new to `tf.data`, you can also iterate over the dataset and print out a few examples as follows.\n"
+        "Мы можем заметить, что в папке train 8,000 примеров, из которых 80% (6400) будут использованы для обучения.\n",
+        "\n",
+        "Пример элементов датасета:\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -250,12 +259,29 @@
         "id": "51wNaPPApk1K",
         "outputId": "9dba5c87-8ad4-4e39-87ea-cb763470128a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Body: b'\"confusing instance of not sure why when i make an instance as in 2 the complier fails and 3 succes..//instantiate class used to fill in new stock details.createstockcodedetails createstockdetailsinput = new createstockcodedetails();.createstockdetailsinput.createstockcodedetails(createnewstockcode); // (2).createstockdetailsinput.createstockdetails(createnewstockcode);  // (3)...when i name the constructor the same name as the class, it fails. why?..class createstockcodedetails extends jframe implements actionlistener {.    public void createstockdetails(string stockcode) {.        // this works   .    }.} .....class createstockcodedetails extends jframe implements actionlistener {.    public void createstockcodedetails(string stockcode) {.        // this fails. why?.    }.}\"\\n'\n",
+            "Label: 1\n",
+            "\n",
+            "Body: b'\"different output than expected i just started programming and right now i\\'m stuck with a problem. i\\'m wondering how if functions really work. ..a = [ 20.0, 8.0, 2.5 ].b = 4.if b &gt; len(a): .    r = 2*b.r = b...i expected the output of 8, but the actual output is 4. how come? because 4 > 3 and that should execute the if statement right?\"\\n'\n",
+            "Label: 3\n",
+            "\n",
+            "Body: b'\"blank foo = foo.bar = foobar i\\'m pretty confused by something i encountered in an application i\\'m working in...there is a method in my object, called move which does this (simplified) upon clicking a list item...var board = {.  move: function() {.     var unique_id = puzzle.pieces.id = 28;.     // more stuff going on with the unique_id variable..  },.}...then throughout the application, puzzle.pieces.id gets used to assign ids to other stuff like this:..$(\\'#puzzle-piece-\\' + puzzle.pieces.id + \\'\\');...after thinking about it might be doing for a while, i came with the following:.upon invoking the method, unique_id assigns a temporary property to the pieces object in the puzzle namespace object. then when clicking a new list item, the the property get overwritten with a new value. ..if this is correct, is it a common practise to quickly make a temporary value available throughout an application, if not, what does it really do?\"\\n'\n",
+            "Label: 2\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "for text_batch, label_batch in raw_train_ds.take(1):\n",
+        "for text_batch, label_batch in raw_train_ds.take(1).as_numpy_iterator():\n",
         "    for i in range(3):\n",
-        "        print(\"Review\", text_batch.numpy()[i])\n",
-        "        print(\"Label\", label_batch.numpy()[i])"
+        "        print(\"Body:\", text_batch[i])\n",
+        "        print(\"Label:\", label_batch[i])\n",
+        "        print()"
       ]
     },
     {
@@ -264,14 +290,12 @@
         "id": "JWq1SUIrp1a-"
       },
       "source": [
-        "Notice the reviews contain raw text (with punctuation and occasional HTML tags like `<br/>`). You will show how to handle these in the following section.\n",
-        "\n",
-        "The labels are 0 or 1. To see which of these correspond to positive and negative movie reviews, you can check the `class_names` property on the dataset.\n"
+        "У нас есть Labels от 0 до 3. Используем class_names, чтобы просмотреть их.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -279,10 +303,23 @@
         "id": "MlICTG8spyO2",
         "outputId": "50cfdab8-4191-460f-ee6b-822624dddda9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Label 0 corresponds to csharp\n",
+            "Label 1 corresponds to java\n",
+            "Label 2 corresponds to javascript\n",
+            "Label 3 corresponds to python\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"Label 0 corresponds to\", raw_train_ds.class_names[0])\n",
-        "print(\"Label 1 corresponds to\", raw_train_ds.class_names[1])"
+        "print(\"Label 1 corresponds to\", raw_train_ds.class_names[1])\n",
+        "print(\"Label 2 corresponds to\", raw_train_ds.class_names[2])\n",
+        "print(\"Label 3 corresponds to\", raw_train_ds.class_names[3])"
       ]
     },
     {
@@ -291,21 +328,12 @@
         "id": "pbdO39vYqdJr"
       },
       "source": [
-        "Next, you will create a validation and test dataset. You will use the remaining 5,000 reviews from the training set for validation.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "SzxazN8Hq1pF"
-      },
-      "source": [
-        "Note: When using the `validation_split` and `subset` arguments, make sure to either specify a random seed, or to pass `shuffle=False`, so that the validation and training splits have no overlap.\n"
+        "Создаем датасеты validation и test.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -313,10 +341,19 @@
         "id": "JsMwwhOoqjKF",
         "outputId": "325725e8-9ee4-4dc6-a871-fcf4fec8b4fc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found 8000 files belonging to 4 classes.\n",
+            "Using 1600 files for validation.\n"
+          ]
+        }
+      ],
       "source": [
         "raw_val_ds = tf.keras.utils.text_dataset_from_directory(\n",
-        "    \"aclImdb/train\",\n",
+        "    \".dataset/train\",\n",
         "    batch_size=batch_size,\n",
         "    validation_split=0.2,\n",
         "    subset=\"validation\",\n",
@@ -326,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -334,10 +371,18 @@
         "id": "rdSr0Nt3q_ns",
         "outputId": "7a151112-512a-4a83-f569-7b3c01b981dd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found 8000 files belonging to 4 classes.\n"
+          ]
+        }
+      ],
       "source": [
         "raw_test_ds = tf.keras.utils.text_dataset_from_directory(\n",
-        "    \"aclImdb/test\", batch_size=batch_size\n",
+        "    \".dataset/test\", batch_size=batch_size\n",
         ")"
       ]
     },
