data preparation and vectorization

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -392,37 +392,28 @@
         "id": "qJmTiO0IYAjm"
       },
       "source": [
-        "### Подготовьте датасет\n",
-        "\n",
-        "Next, you will standardize, tokenize, and vectorize the data using the helpful `tf.keras.layers.TextVectorization` layer.\n",
-        "\n",
-        "Standardization refers to preprocessing the text, typically to remove punctuation or HTML elements to simplify the dataset. Tokenization refers to splitting strings into tokens (for example, splitting a sentence into individual words, by splitting on whitespace). Vectorization refers to converting tokens into numbers so they can be fed into a neural network. All of these tasks can be accomplished with this layer.\n",
-        "\n",
-        "As you saw above, the reviews contain various HTML tags like `<br />`. These tags will not be removed by the default standardizer in the `TextVectorization` layer (which converts text to lowercase and strips punctuation by default, but doesn't strip HTML). You will write a custom standardization function to remove the HTML.\n"
+        "### Подготовьте датасет\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "ZVcHl-SLrH-u"
-      },
+      "metadata": {},
       "source": [
-        "Note: To prevent [training-testing skew](https://developers.google.com/machine-learning/guides/rules-of-ml#training-serving_skew) (also known as training-serving skew), it is important to preprocess the data identically at train and test time. To facilitate this, the `TextVectorization` layer can be included directly inside your model, as shown later in this tutorial.\n"
+        "Стандартизация данных\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "metadata": {
         "id": "SDRI_s_tX1Hk"
       },
       "outputs": [],
       "source": [
         "def custom_standardization(input_data):\n",
-        "    lowercase = tf.strings.lower(input_data)\n",
-        "    stripped_html = tf.strings.regex_replace(lowercase, \"<br />\", \" \")\n",
         "    return tf.strings.regex_replace(\n",
-        "        stripped_html, \"[%s]\" % re.escape(string.punctuation), \"\"\n",
+        "        tf.strings.lower(input_data), \"[%s]\" % re.escape(\n",
+        "            string.punctuation), \"\"\n",
         "    )"
       ]
     },
@@ -432,14 +423,12 @@
         "id": "d2d3Aw8dsUux"
       },
       "source": [
-        "Next, you will create a `TextVectorization` layer. You will use this layer to standardize, tokenize, and vectorize our data. You set the `output_mode` to `int` to create unique integer indices for each token.\n",
-        "\n",
-        "Note that you're using the default split function, and the custom standardization function you defined above. You'll also define some constants for the model, like an explicit maximum `sequence_length`, which will cause the layer to pad or truncate sequences to exactly `sequence_length` values.\n"
+        "Создаем слой `TextVectorization`, который используется для стандартизации, токенизации и векторизации данных.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {
         "id": "-c76RvSzsMnX"
       },
@@ -457,32 +446,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "vlFOpfF6scT6"
-      },
-      "source": [
-        "Next, you will call `adapt` to fit the state of the preprocessing layer to the dataset. This will cause the model to build an index of strings to integers.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "lAhdjK7AtroA"
-      },
-      "source": [
-        "Note: It's important to only use your training data when calling adapt (using the test set would leak information).\n"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {
         "id": "GH4_2ZGJsa_X"
       },
       "outputs": [],
       "source": [
-        "# Make a text-only dataset (without labels), then call adapt\n",
         "train_text = raw_train_ds.map(lambda x, y: x)\n",
         "vectorize_layer.adapt(train_text)"
       ]
@@ -493,12 +463,12 @@
         "id": "SHQVEFzNt-K_"
       },
       "source": [
-        "Let's create a function to see the result of using this layer to preprocess some data.\n"
+        "Посмотрим пример векторного представления\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {
         "id": "SCIg_T50wOCU"
       },
@@ -511,7 +481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -519,14 +489,47 @@
         "id": "XULcm6B3xQIO",
         "outputId": "48f25d1e-7b8e-4b8e-9dae-bd747c465851"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Post tf.Tensor(b'bubble sort without using temporary variable i want to sort both 1 dimensional and 2 dimensional array without using temp variable in blank..how to do it can anyone suggest\\n', shape=(), dtype=string)\n",
+            "Label java\n",
+            "Vectorized post (<tf.Tensor: shape=(1, 250), dtype=int64, numpy=\n",
+            "array([[   1,  441,  203,   47, 3547,  116,    3,   46,    4,  441,  280,\n",
+            "          25, 3687,    8,   57, 3687,   82,  203,   47,  494,  116,    7,\n",
+            "        6854,    4,   40,   11,   35,  285, 1174,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0]], dtype=int64)>, <tf.Tensor: shape=(), dtype=int32, numpy=1>)\n"
+          ]
+        }
+      ],
       "source": [
         "# retrieve a batch (of 32 reviews and labels) from the dataset\n",
         "text_batch, label_batch = next(iter(raw_train_ds))\n",
-        "first_review, first_label = text_batch[0], label_batch[0]\n",
-        "print(\"Review\", first_review)\n",
+        "first_post, first_label = text_batch[0], label_batch[0]\n",
+        "print(\"Post\", first_post)\n",
         "print(\"Label\", raw_train_ds.class_names[first_label])\n",
-        "print(\"Vectorized review\", vectorize_text(first_review, first_label))"
+        "print(\"Vectorized post\", vectorize_text(first_post, first_label))"
       ]
     },
     {
@@ -535,12 +538,12 @@
         "id": "6u5EX0hxyNZT"
       },
       "source": [
-        "As you can see above, each token has been replaced by an integer. You can lookup the token (string) that each integer corresponds to by calling `.get_vocabulary()` on the layer.\n"
+        "Посмотрим наш словарь\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -548,7 +551,17 @@
         "id": "kRq9hTQzhVhW",
         "outputId": "ae9292c9-d6dd-4148-97ad-278155440bc3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1287 --->  saw\n",
+            " 313 --->  source\n",
+            "Vocabulary size: 10000\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"1287 ---> \", vectorize_layer.get_vocabulary()[1287])\n",
         "print(\" 313 ---> \", vectorize_layer.get_vocabulary()[313])\n",
@@ -561,12 +574,12 @@
         "id": "XD2H6utRydGv"
       },
       "source": [
-        "You are nearly ready to train your model. As a final preprocessing step, you will apply the TextVectorization layer you created earlier to the train, validation, and test dataset.\n"
+        "Применим слой `TextVectorization` для ранее созданых датасетов train, validation и test\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {
         "id": "2zhmpeViI1iG"
       },
