--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -598,18 +598,14 @@
       "source": [
         "### Немного о вопросах производительности\n",
         "\n",
-        "These are two important methods you should use when loading data to make sure that I/O does not become blocking.\n",
+        "Используем chache и prefetch для оптимизации производительности\n",
         "\n",
-        "`.cache()` keeps data in memory after it's loaded off disk. This will ensure the dataset does not become a bottleneck while training your model. If your dataset is too large to fit into memory, you can also use this method to create a performant on-disk cache, which is more efficient to read than many small files.\n",
-        "\n",
-        "`.prefetch()` overlaps data preprocessing and model execution while training.\n",
-        "\n",
-        "You can learn more about both methods, as well as how to cache data to disk in the [data performance guide](https://www.tensorflow.org/guide/data_performance).\n"
+        "[data performance guide](https://www.tensorflow.org/guide/data_performance).\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 72,
       "metadata": {
         "id": "wMcs_H7izm5m"
       },
