--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -631,7 +631,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 78,
       "metadata": {
         "id": "dkQP6in8yUBR"
       },
@@ -642,7 +642,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 79,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -650,7 +650,34 @@
         "id": "xpKOoWgu-llD",
         "outputId": "736e0611-b789-4311-94e6-089672762f17"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_2\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " embedding_2 (Embedding)     (None, None, 16)          160016    \n",
+            "                                                                 \n",
+            " dropout_4 (Dropout)         (None, None, 16)          0         \n",
+            "                                                                 \n",
+            " global_average_pooling1d_2   (None, 16)               0         \n",
+            " (GlobalAveragePooling1D)                                        \n",
+            "                                                                 \n",
+            " dropout_5 (Dropout)         (None, 16)                0         \n",
+            "                                                                 \n",
+            " dense_2 (Dense)             (None, 4)                 68        \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 160,084\n",
+            "Trainable params: 160,084\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ],
       "source": [
         "model = tf.keras.Sequential(\n",
         "    [\n",
@@ -658,7 +685,7 @@
         "        layers.Dropout(0.2),\n",
         "        layers.GlobalAveragePooling1D(),\n",
         "        layers.Dropout(0.2),\n",
-        "        layers.Dense(1),\n",
+        "        layers.Dense(4),\n",
         "    ]\n",
         ")\n",
         "\n",
