--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -695,41 +695,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6PbKQ6mucuKL"
-      },
-      "source": [
-        "The layers are stacked sequentially to build the classifier:\n",
-        "\n",
-        "1. The first layer is an `Embedding` layer. This layer takes the integer-encoded reviews and looks up an embedding vector for each word-index. These vectors are learned as the model trains. The vectors add a dimension to the output array. The resulting dimensions are: `(batch, sequence, embedding)`. To learn more about embeddings, check out the [Word embeddings](https://www.tensorflow.org/text/guide/word_embeddings) tutorial.\n",
-        "2. Next, a `GlobalAveragePooling1D` layer returns a fixed-length output vector for each example by averaging over the sequence dimension. This allows the model to handle input of variable length, in the simplest way possible.\n",
-        "3. The last layer is densely connected with a single output node.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "L4EqVWg4-llM"
       },
       "source": [
         "### Функция потерь и метод оптимизации\n",
         "\n",
-        "A model needs a loss function and an optimizer for training. Since this is a binary classification problem and the model outputs a probability (a single-unit layer with a sigmoid activation), you'll use `losses.BinaryCrossentropy` loss function.\n",
+        "Используем функцию потерь, подходящую для целочисленных меток классов: `tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)`.\n",
         "\n",
-        "Now, configure the model to use an optimizer and a loss function:\n"
+        "Используем метрику `accuracy`.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 80,
       "metadata": {
         "id": "Mr0GP-cQ-llN"
       },
       "outputs": [],
       "source": [
         "model.compile(\n",
-        "    loss=losses.BinaryCrossentropy(from_logits=True),\n",
+        "    loss=losses.SparseCategoricalCrossentropy(from_logits=True),\n",
         "    optimizer=\"adam\",\n",
-        "    metrics=tf.metrics.BinaryAccuracy(threshold=0.0),\n",
+        "    metrics=[\"accuracy\"],\n",
         ")"
       ]
     },
